updated vacation code

--- a/Vacation_Itinerary/Vacation_Itinerary.ipynb
+++ b/Vacation_Itinerary/Vacation_Itinerary.ipynb
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,31 +217,31 @@
     "\n",
     "vacation_start = vacation_df.loc[(vacation_df['City']=='Sunland Park')\n",
     "                                & (vacation_df['Hotel Name']=='SpringHill Suites by Marriott El Paso')]\n",
-    "vacation_end = vacation_df.loc[(vacation_df['City']=='San Patricio')\n",
-    "                              & (vacation_df['Hotel Name']=='Motel 6 Sinton, TX')]\n",
-    "vacation_stop1 = vacation_df.loc[(vacation_df['City']=='Atambua')\n",
-    "                              & (vacation_df['Hotel Name']=='Pastori 1 Jemaat Polycarpus')]\n",
-    "vacation_stop2 = vacation_df.loc[(vacation_df['City']=='Don Sak')\n",
-    "                                & (vacation_df['Hotel Name']=='Sea Sun Moon Hostel')] \n",
-    "vacation_stop3 = vacation_df.loc[(vacation_df['City']=='Maturin')\n",
-    "                                & (vacation_df['Hotel Name']=='Hotel Residencial La Pichincha')] "
+    "vacation_end = vacation_df.loc[(vacation_df['City']=='Sunland Park')\n",
+    "                              & (vacation_df['Hotel Name']=='SpringHill Suites by Marriott El Paso')]\n",
+    "vacation_stop1 = vacation_df.loc[(vacation_df['City']=='Ocampo')\n",
+    "                              & (vacation_df['Hotel Name']=='Hotel Estancia del Vaquero')]\n",
+    "vacation_stop2 = vacation_df.loc[(vacation_df['City']=='San Patricio')\n",
+    "                                & (vacation_df['Hotel Name']=='Motel 6 Sinton, TX')] \n",
+    "vacation_stop3 = vacation_df.loc[(vacation_df['City']=='Ixtapa')\n",
+    "                                & (vacation_df['Hotel Name']=='Hotel Plaza Providencia')] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "(array([[  31.7965, -106.58  ]]),\n",
-       " array([[ -9.1061, 124.8925]]),\n",
-       " array([[ 9.3168, 99.6918]]),\n",
-       " array([[  9.75  , -63.1767]]))"
+       " array([[  21.65, -101.5 ]]),\n",
+       " array([[ 28.017 , -97.5169]]),\n",
+       " array([[  20.7, -105.2]]))"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,21 +258,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "# add the latitude/longitude\n",
     "start=(31.7965, -106.58)\n",
     "end=(31.7965, -106.58)\n",
-    "stop1=(-9.1061 , 124.8925)\n",
-    "stop2=(9.3168, 99.6918)\n",
-    "stop3=(9.75, -63.1767)"
+    "stop1=(21.65 , -101.5)\n",
+    "stop2=(28.017, -97.5169)\n",
+    "stop3=(20.7, -105.2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {
     "scrolled": true
    },
@@ -280,7 +280,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "26b5dc2f59824bddad1a221bad33cf16",
+       "model_id": "ec1279b89b0a4c6598c03dddb392b4ba",
        "version_major": 2,
        "version_minor": 0
       },
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -354,36 +354,36 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>303</td>\n",
-       "      <td>Atambua</td>\n",
-       "      <td>ID</td>\n",
-       "      <td>75.24</td>\n",
-       "      <td>overcast clouds</td>\n",
-       "      <td>-9.1061</td>\n",
-       "      <td>124.8925</td>\n",
-       "      <td>Pastori 1 Jemaat Polycarpus</td>\n",
+       "      <td>483</td>\n",
+       "      <td>Ocampo</td>\n",
+       "      <td>MX</td>\n",
+       "      <td>67.95</td>\n",
+       "      <td>broken clouds</td>\n",
+       "      <td>21.6500</td>\n",
+       "      <td>-101.5000</td>\n",
+       "      <td>Hotel Estancia del Vaquero</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>580</td>\n",
-       "      <td>Don Sak</td>\n",
-       "      <td>TH</td>\n",
-       "      <td>74.07</td>\n",
-       "      <td>scattered clouds</td>\n",
-       "      <td>9.3168</td>\n",
-       "      <td>99.6918</td>\n",
-       "      <td>Sea Sun Moon Hostel</td>\n",
+       "      <td>35</td>\n",
+       "      <td>San Patricio</td>\n",
+       "      <td>US</td>\n",
+       "      <td>61.21</td>\n",
+       "      <td>clear sky</td>\n",
+       "      <td>28.0170</td>\n",
+       "      <td>-97.5169</td>\n",
+       "      <td>Motel 6 Sinton, TX</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>251</td>\n",
-       "      <td>Maturin</td>\n",
-       "      <td>VE</td>\n",
-       "      <td>80.78</td>\n",
-       "      <td>overcast clouds</td>\n",
-       "      <td>9.7500</td>\n",
-       "      <td>-63.1767</td>\n",
-       "      <td>Hotel Residencial La Pichincha</td>\n",
+       "      <td>587</td>\n",
+       "      <td>Ixtapa</td>\n",
+       "      <td>MX</td>\n",
+       "      <td>81.63</td>\n",
+       "      <td>clear sky</td>\n",
+       "      <td>20.7000</td>\n",
+       "      <td>-105.2000</td>\n",
+       "      <td>Hotel Plaza Providencia</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -392,18 +392,18 @@
       "text/plain": [
        "   City_ID          City Country  Max Temp Current Description      Lat  \\\n",
        "0      641  Sunland Park      US     55.81           clear sky  31.7965   \n",
-       "1      303       Atambua      ID     75.24     overcast clouds  -9.1061   \n",
-       "2      580       Don Sak      TH     74.07    scattered clouds   9.3168   \n",
-       "3      251       Maturin      VE     80.78     overcast clouds   9.7500   \n",
+       "1      483        Ocampo      MX     67.95       broken clouds  21.6500   \n",
+       "2       35  San Patricio      US     61.21           clear sky  28.0170   \n",
+       "3      587        Ixtapa      MX     81.63           clear sky  20.7000   \n",
        "\n",
        "        Lng                             Hotel Name  \n",
        "0 -106.5800  SpringHill Suites by Marriott El Paso  \n",
-       "1  124.8925            Pastori 1 Jemaat Polycarpus  \n",
-       "2   99.6918                    Sea Sun Moon Hostel  \n",
-       "3  -63.1767         Hotel Residencial La Pichincha  "
+       "1 -101.5000             Hotel Estancia del Vaquero  \n",
+       "2  -97.5169                     Motel 6 Sinton, TX  \n",
+       "3 -105.2000                Hotel Plaza Providencia  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,13 +440,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6315539cbfb24f018ba7deb24336e4a7",
+       "model_id": "73c5fd79d4e14b0589b5874f31460259",
        "version_major": 2,
        "version_minor": 0
       },
